# r_base

./: CMakeLists.txt  Error.cpp  Error.h  Error.h.bak  FileStore.cpp  FileStore.h  ID.cpp  ID.h  Log.cpp  Log.h  MD5.cpp  MD5.h  MD5Coder.cpp  MD5Coder.h  Property.h  Range.h  SandBox.cpp  SessionFileLogger.cpp  SessionFileLogger.h  Status.h  Watch.h  concurrent.h  current.cpp  current.h  dbc.cpp  dbc.h  debug.cpp  debug.h  decl.h  endianess.h  execute_and_notify_on_error.h  exit.cpp  exit.h  expected.h  file.cpp  file.h  filesystem.cpp  filesystem.h  language_tools.h  log_consumer_console.cpp  (+24 more)
commandline/: Command.cpp  Command.h  Command_Help.cpp  Command_Help.h
documentation/: introduction.md
